ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apiproject-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: mylocaldomain.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: apiproject
                port:
                  number: 8002
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: sso-be-service
                port:
                  number: 8000
